plugins/formal-verification/testData/diagnostics/no_contracts/scope_functions.kt
fun <!VIPER_TEXT!>use_run<!>() {
    val x: Int
    run {
        x = 0
    }
}
